Refactor: 뱃지 api에 userId 파라미터 추가
