# src/routes/users.routes.js
@@ -9,7 +9,7 @@ router.put('/me', authMiddleware, usersController.putMe);
 router.get('/:userId/challenges/ongoing', usersController.getUserChallengesOngoing);
 router.get('/:userId/challenges/completed', usersController.getUserChallengesCompleted);
 router.get('/challenges/verification/history', authMiddleware, usersController.getUserChallengesHistory);
-router.get('/badges', authMiddleware, usersController.getUserBadges);
+router.get('/:userId/badges', usersController.getUserBadges);
 router.post('/:followedUserId/follow', authMiddleware, usersController.postUserFollow);
 router.delete('/:unfollowedUserId/unfollow', authMiddleware, usersController.deleteUserFollow);
 router.get('/verification/scrap', authMiddleware, usersController.getUserVerificationScraps);
